--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "axios": "^1.5.0",
     "axios-hooks": "^5.0.0",
     "classnames": "^2.3.2",
@@ -34,6 +35,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.19",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
