--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.3",
     "axios": "^1.5.0",
     "axios-hooks": "^5.0.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
+    "framer-motion": "^11.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
