--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^11.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
