--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/x-date-pickers": "^7.18.0",
     "axios": "^1.5.0",
     "axios-hooks": "^5.0.0",
     "classnames": "^2.3.2",
